Fix some spacing issues with water rights table

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -86,8 +86,13 @@ h4 {
   padding-top: 15px;
 }
 
+#water_rights_table_wrapper {
+  padding-top: 0;
+}
+
 div.dataTables_filter input {
   margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
 #services-grid {
